<?xml version="1.0" encoding="utf-8"?>

<!--using view binding as layout-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--using scroll view to fit small screens-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--using linear layout as it is easier to implement in such simple layouts-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                app:srcCompat= "@drawable/ic_login"
                android:layout_margin="@dimen/_20sdp"
                android:contentDescription="@string/login"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_login_username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16ssp"
                    android:hint="@string/enter_username"
                    android:textStyle="bold"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16ssp"
                    android:hint="@string/enter_email"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fragment_login_login_btn"
                style="@style/login_btn_style"
                android:text="@string/login_access"
                android:textSize="@dimen/_20sdp" />
            <Button
                android:id="@+id/fragment_login_register_btn"
                style="@style/login_btn_style"
                android:text="@string/register_access"
                android:textSize="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_30sdp"/>

        </LinearLayout>
        
    </ScrollView>
    
</layout>