<?xml version="1.0" encoding="utf-8"?>
<!--using view binding as layout-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--using scroll view to fit small screens-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Using constraint layout to easily locate btn so no need for nested views-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_welcome_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                app:srcCompat="@drawable/ic_welcome"
                android:contentDescription="@string/welcome_iv"/>

            <TextView
                android:id="@+id/fragment_welcome_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/slackey"
                android:gravity="center"
                android:text="@string/welcome_tv1"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold"
                android:textColor="#318E85"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_welcome_iv" />

            <TextView
                android:id="@+id/fragment_welcome_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:text="@string/welcome_tv2"
                android:textColor="#E91E63"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_welcome_tv1" />

            <Button
                android:id="@+id/fragment_welcome_btn"
                android:background="@color/cardview_light_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_welcome_tv2"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:text="@string/to_instructions"
                android:padding="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_16ssp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>