<?xml version="1.0" encoding="utf-8"?>

<!--using view binding as layout-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Using Scroll view to fit small screens-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Using constraint layout to easily locate btn so no need for nested views-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_instructions_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                app:srcCompat="@drawable/ic_instructions"
                android:contentDescription="@string/instructions_iv"/>

            <TextView
                android:id="@+id/fragment_instructions_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="start"
                android:text="@string/instructions_tv1"
                android:textColor="#F30656"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_instructions_iv" />

            <TextView
                android:id="@+id/fragment_instructions_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/andika_new_basic"
                android:textStyle="bold"
                android:gravity="start"
                android:text="@string/instructions_tv2"
                android:textColor="#0C0C0C"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_instructions_tv1" />

            <Button
                android:id="@+id/fragment_instructions_btn"
                android:background="@color/cardview_light_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_instructions_tv2"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:text="@string/to_shoe_listing"
                android:padding="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_16ssp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>